# janus

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile.aggregation_job_creator  Dockerfile.interop  Dockerfile.interop_aggregator  Dockerfile.sqlx  README.md  deny.toml  docker-bake.hcl  rustfmt.toml
adapter/: Cargo.toml  README.md
adapter/src/: main.rs
aggregator/: Cargo.toml  build.rs
aggregator/src/: aggregator.rs  binaries.rs  binary_utils.rs  cache.rs  config.rs  datastore.rs  diagnostic.rs  lib.rs  main.rs  messages.rs  metrics.rs  task.rs  trace.rs
aggregator/src/aggregator/: accumulator.rs  aggregate_init_tests.rs  aggregate_share.rs  aggregation_job_continue.rs  aggregation_job_creator.rs  aggregation_job_driver.rs  aggregation_job_init.rs  aggregation_job_writer.rs  batch_creator.rs  batch_mode.rs  collect_job_driver.rs  collection_job_driver.rs  collection_job_tests.rs  error.rs  garbage_collector.rs  http_handlers.rs  key_rotator.rs  problem_details.rs  query_type.rs  queue.rs  report_writer.rs  taskprov_tests.rs  test_util.rs  upload_tests.rs
aggregator/src/aggregator/aggregation_job_driver/: tests.rs
aggregator/src/binaries/: aggregation_job_creator.rs  aggregation_job_driver.rs  aggregator.rs  collection_job_driver.rs  garbage_collector.rs  janus_cli.rs  key_rotator.rs
aggregator/src/binary_utils/: job_driver.rs
aggregator/src/datastore/: test_util.rs
aggregator/src/metrics/: test_util.rs  tests.rs  tokio_runtime.rs
aggregator/src/metrics/tests/: config.rs  mod.rs  prometheus.rs
aggregator/tests/: graceful_shutdown.rs
aggregator/tests/cmd/: aggregation_job_creator.trycmd  aggregation_job_driver.trycmd  aggregator.trycmd
aggregator/tests/integration/: cli.rs  graceful_shutdown.rs  main.rs
aggregator/tests/tls_files/: 127.0.0.1-key.pem  127.0.0.1.pem  regenerate.sh  rootCA-key.pem  rootCA.pem
aggregator_api/: Cargo.toml  build.rs
aggregator_api/src/: lib.rs  models.rs  routes.rs  telemetry.rs  tests.rs
aggregator_core/: Cargo.toml  README.md
aggregator_core/src/: batch_mode.rs  datastore.rs  datastore_temp.rs  http_server.rs  lib.rs  messages.rs  query_type.rs  task.rs  taskprov.rs
aggregator_core/src/datastore/: leases.rs  models.rs  task_counters.rs  task_counters_tests.rs  test_util.rs  tests.rs
aggregator_core/src/test_util/: mod.rs
client/: Cargo.toml  README.md
client/src/: lib.rs
client/src/tests/: mod.rs  ohttp.rs
collector/: Cargo.toml  README.md
collector/examples/: collect.rs
collector/src/: credential.rs  lib.rs
core/: Cargo.toml  README.md
core/src/: auth_tokens.rs  cli.rs  dp.rs  hpke.rs  http.rs  lib.rs  report_id.rs  retries.rs  task.rs  task_config.rs  test-vectors.json  time.rs  vdaf.rs
core/src/http/: cached_resource.rs  cached_resource_tests.rs
core/src/task/: message_sizes.rs
core/src/test_util/: dummy_vdaf.rs  kubernetes.rs  mod.rs  runtime.rs  testcontainers.rs
integration_tests/: Cargo.toml  README.md  build.rs
integration_tests/src/: client.rs  daphne.rs  divviup_api_client.rs  interop_api.rs  janus.rs  lib.rs  logs.rs
integration_tests/tests/: daphne.rs  divviup_ts.rs  in_cluster.rs  janus.rs
integration_tests/tests/common/: mod.rs
integration_tests/tests/integration/: common.rs  daphne.rs  divviup_ts.rs  in_cluster.rs  janus.rs  main.rs  metrics.rs  simulation.rs
integration_tests/tests/integration/simulation/: arbitrary.rs  bad_client.rs  mod.rs  model.rs  proxy.rs  quicktest.rs  run.rs  (+2 more)
interop_binaries/: Cargo.toml  build.rs  setup.sh  supervisord.conf
interop_binaries/config/: aggregation_job_creator.yaml  aggregation_job_driver.yaml  aggregator.yaml  collection_job_driver.yaml  janus_cli.yaml  janus_interop_aggregator.yaml  key_rotator.yaml  supervisord.conf
interop_binaries/src/: lib.rs  main.rs  testcontainer.rs
interop_binaries/src/commands/: janus_interop_aggregator.rs  janus_interop_client.rs  janus_interop_collector.rs  mod.rs
interop_binaries/tests/: end_to_end.rs
janus/: Cargo.toml
janus/src/: hpke.rs  lib.rs  message.rs  time.rs
janus_client/: Cargo.toml
janus_client/src/: lib.rs
janus_collector/: Cargo.toml
janus_collector/examples/: collect.rs
janus_collector/src/: lib.rs
janus_core/: Cargo.toml
janus_core/src/: hpke.rs  http.rs  lib.rs  message.rs  nonce.rs  report_id.rs  retries.rs  task.rs  time.rs
janus_core/src/test_util/: dummy_vdaf.rs  kubernetes.rs  mod.rs  runtime.rs  testcontainers.rs
janus_messages/: Cargo.toml  README.md
janus_messages/src/: lib.rs
janus_server/: Cargo.toml
janus_server/src/: aggregator.rs  binary_utils.rs  client.rs  config.rs  datastore.rs  hpke.rs  job_creator.rs  lib.rs  message.rs  messages.rs  metrics.rs  task.rs  time.rs  trace.rs
janus_server/src/aggregator/: accumulator.rs  aggregate_share.rs  aggregation_job_creator.rs  aggregation_job_driver.rs
janus_server/src/binary_utils/: job_driver.rs
janus_server/tests/: graceful_shutdown.rs  integration_test.rs  server_shutdown.rs
janus_server/tests/cmd/: aggregation_job_creator.trycmd  aggregation_job_driver.trycmd  aggregator.trycmd
messages/: Cargo.toml  README.md
messages/src/: batch_mode.rs  lib.rs  problem_type.rs  query_type.rs  task.rs  taskprov.rs  tests.rs  time.rs
messages/src/tests/: aggregation.rs  collection.rs  common.rs  hpke.rs  mod.rs  query.rs  task.rs  upload.rs
messages/tests/cmd/: dap_decode.trycmd
monolithic_integration_test/: Cargo.toml  Dockerfile.test_daphne  README.md  build.rs
monolithic_integration_test/artifacts/: wrangler.toml
monolithic_integration_test/artifacts/daphne_compiled/: index.wasm  shim.mjs
monolithic_integration_test/src/: daphne.rs  janus.rs  lib.rs
monolithic_integration_test/tests/: daphne.rs  integration_test.rs  janus.rs
monolithic_integration_test/tests/common/: mod.rs
test_util/: Cargo.toml
test_util/src/: dummy_vdaf.rs  lib.rs  runtime.rs
tools/: Cargo.toml
tools/tests/: cli.rs
tools/tests/cmd/: collect.trycmd  collect_fpvec_bounded_l2.trycmd  dap_decode.trycmd  hpke_keygen.trycmd
xtask/: Cargo.toml
xtask/src/: main.rs
(+153 files in other folders)
