[package]
name = "janus_adapter"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
janus_collector.workspace = true
janus_core = { workspace = true, features = ["test-util"] }
janus_messages.workspace = true
prio.workspace = true
rand = "0.8.5"
thiserror.workspace = true
tokio.workspace = true
url = "2.4.1"
