[package]
name = "janus_aggregator"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["kube-rustls"]
tokio-console = ["dep:console-subscriber"]
jaeger = ["dep:tracing-opentelemetry", "dep:opentelemetry-jaeger"]
otlp = [
    "dep:tracing-opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:tonic",
]
prometheus = ["dep:opentelemetry-prometheus", "dep:prometheus"]
test-util = [
    "janus_core/test-util",
    "janus_messages/test-util",
    "dep:lazy_static",
    "dep:testcontainers",
]
kube-rustls = ["kube/rustls-tls"]
kube-openssl = ["kube/openssl-tls"]

[dependencies]
anyhow = "1"
atty = "0.2"
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.13.0"
bytes = "1.2.1"
chrono = "0.4"
clap = { version = "4.0.12", features = ["derive", "env"] }
console-subscriber = { version = "0.1.8", optional = true }
deadpool = { version = "0.9.5", features = ["rt_tokio_1"] }
deadpool-postgres = "0.10.1"
derivative = "2.2.0"
futures = "0.3.24"
http = "0.2.8"
http-api-problem = "0.55.0"
hyper = "0.14.20"
itertools = "0.10.5"
janus_core = { path = "../core" }
janus_messages = { path = "../messages" }
k8s-openapi = { version = "0.13.1", features = ["v1_20"] }  # keep this version in sync with what is referenced by the indirect dependency via `kube`
kube = { version = "0.65.0", default-features = false, features = ["client"] }
lazy_static = { version = "1", optional = true }
opentelemetry = { version = "0.18", features = ["metrics", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.17", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11", optional = true, features = ["metrics"] }  # ensure that the version of tonic below matches what this uses
opentelemetry-prometheus = { version = "0.11", optional = true }
opentelemetry-semantic-conventions = { version = "0.10", optional = true }
postgres-protocol = "0.6.4"
postgres-types = { version = "0.2.4", features = ["derive", "array-impls"] }
prio = { version = "0.10.0", features = ["multithreaded"] }
prometheus = { version = "0.13.2", optional = true }
rand = { version = "0.8", features = ["min_const_gen"] }
reqwest = { version = "0.11.12", default-features = false, features = ["rustls-tls", "json"] }
ring = "0.16.20"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_yaml = "0.9.13"
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
testcontainers = { version = "0.14.0", optional = true }
thiserror = "1.0"
tokio = { version = "1.21", features = ["full", "tracing"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1", "array-impls"] }
tonic = { version = "0.8", optional = true, features = ["tls", "tls-webpki-roots"] }  # keep this version in sync with what opentelemetry-otlp uses
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-opentelemetry = { version = "0.18", optional = true }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "fmt", "json"] }
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.2.1", features = ["v4"] }
warp = { version = "0.3", features = ["tls"] }

[dev-dependencies]
assert_matches = "1"
hex = { version = "0.4.3", features = ["serde"] }
hyper = "0.14.20"
# Enable `kube`'s `openssl-tls` feature (which takes precedence over the
# `rustls-tls` feature when creating a default client) to work around rustls's
# lack of support for connecting to servers by IP addresses, which affects many
# Kubernetes clusters. Enable the `test-util` feature for various utilities
# used in unit tests.
janus_aggregator = { path = ".", features = ["kube-openssl", "test-util"] }
mockito = "0.31.0"
serde_test = "1.0.145"
tempfile = "3.3.0"
tokio = { version = "1", features = ["test-util"] }  # ensure this remains compatible with the non-dev dependency
trycmd = "0.14.0"
wait-timeout = "0.2.0"
