[package]
name = "janus_aggregator"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
fpvec_bounded_l2 = ["dep:fixed", "janus_core/fpvec_bounded_l2"]
tokio-console = ["dep:console-subscriber"]
otlp = [
    "dep:tracing-opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:tonic",
]
prometheus = ["dep:opentelemetry-prometheus", "dep:prometheus"]
test-util = [
    "janus_core/test-util",
    "janus_messages/test-util",
    "dep:hex",
    "dep:lazy_static",
    "dep:testcontainers",
    "dep:trillium-testing",
]

[dependencies]
async-trait = "0.1"
anyhow.workspace = true
atty = "0.2"
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.21.4"
bytes = "1.5.0"
chrono.workspace = true
clap = { version = "4.4.6", features = ["derive", "env"] }
console-subscriber = { version = "0.2.0", optional = true }
deadpool = { version = "0.10.0", features = ["rt_tokio_1"] }
deadpool-postgres = "0.11.0"
derivative.workspace = true
futures = "0.3.28"
fixed = { version = "1.24", optional = true }
git-version = "0.3.5"
hex = { version = "0.4.3", features = ["serde"], optional = true }
http = "0.2.9"
http-api-problem = "0.57.0"
hyper = "0.14.27"
itertools.workspace = true
janus_aggregator_api.workspace = true
janus_aggregator_core.workspace = true
janus_core.workspace = true
janus_messages.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
lazy_static = { version = "1", optional = true }
once_cell = "1.18.0"
opentelemetry = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13", optional = true, features = ["metrics"] }  # ensure that the version of tonic below matches what this uses
opentelemetry-prometheus = { version = "0.13", optional = true }
opentelemetry-semantic-conventions = { version = "0.12", optional = true }
postgres-protocol = "0.6.6"
postgres-types = { version = "0.2.6", features = ["derive", "array-impls"] }
prio.workspace = true
prometheus = { version = "0.13.3", optional = true }
rand = { version = "0.8", features = ["min_const_gen"] }
regex = "1"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "json"] }
ring = "0.17.2"
routefinder = "0.5.3"
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7.1"
serde_yaml.workspace = true
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
testcontainers = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1", "array-impls"] }
tonic = { version = "0.9.2", optional = true, features = ["tls", "tls-webpki-roots"] }  # keep this version in sync with what opentelemetry-otlp uses
tracing = "0.1.39"
tracing-chrome = "0.7.1"
tracing-log = "0.1.3"
tracing-opentelemetry = { version = "0.21", optional = true }
tracing-stackdriver = "0.8.0"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "fmt", "json"] }
trillium.workspace = true
trillium-api.workspace = true
trillium-caching-headers.workspace = true
trillium-head.workspace = true
trillium-opentelemetry.workspace = true
trillium-prometheus = "0.1.0"
trillium-router.workspace = true
trillium-testing = { workspace = true, optional = true }
trillium-tokio.workspace = true
url = { version = "2.4.1", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
assert_matches = "1"
hyper = "0.14.27"
janus_aggregator = { path = ".", features = ["fpvec_bounded_l2", "test-util"] }
janus_aggregator_core = { workspace = true, features = ["test-util"] }
mockito = "1.2.0"
rstest.workspace = true
tempfile = "3.8.0"
tokio = { version = "1", features = ["test-util"] } # ensure this remains compatible with the non-dev dependency
trillium-testing.workspace = true
trycmd = "0.14.19"
wait-timeout = "0.2.0"

[build-dependencies]
rustc_version = "0.4.0"
