[package]
name = "janus_aggregator_api"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
base64.workspace = true
derivative.workspace = true
janus_aggregator_core.workspace = true
janus_core.workspace = true
janus_messages.workspace = true
opentelemetry.workspace = true
querystring = "1.1.0"
rand = { version = "0.8", features = ["min_const_gen"] }
ring = "0.17.5"
serde.workspace = true
serde_json.workspace = true
serde_test.workspace = true
thiserror.workspace = true
tracing = "0.1.40"
trillium.workspace = true
trillium-api.workspace = true
trillium-opentelemetry.workspace = true
trillium-router.workspace = true
url = { version = "2.4.1", features = ["serde"] }

[dev-dependencies]
assert_matches.workspace = true
futures = "0.3.29"
janus_aggregator_core = { workspace = true, features = ["test-util"] }
rstest.workspace = true
tokio.workspace = true
trillium-testing = { workspace = true, features = ["tokio"] }
