[package]
name = "janus_aggregator_api"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = { workspace = true }
base64.workspace = true
derivative.workspace = true
git-version.workspace = true
janus_aggregator_core.workspace = true
janus_core.workspace = true
janus_messages.workspace = true
opentelemetry.workspace = true
querystring = { workspace = true }
rand = { workspace = true, features = ["min_const_gen"] }
ring = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing = { workspace = true }
trillium.workspace = true
trillium-api.workspace = true
trillium-opentelemetry.workspace = true
trillium-router.workspace = true
url.workspace = true

[dev-dependencies]
assert_matches.workspace = true
futures = { workspace = true }
janus_aggregator_core = { workspace = true, features = ["test-util"] }
rstest.workspace = true
serde_test.workspace = true
tokio.workspace = true
trillium-testing = { workspace = true, features = ["tokio"] }
