[package]
name = "janus_aggregator_api"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
aws-lc-rs = { workspace = true }
axum.workspace = true
base64.workspace = true
chrono.workspace = true
educe.workspace = true
git-version.workspace = true
http.workspace = true
janus_aggregator_core.workspace = true
janus_core.workspace = true
janus_messages.workspace = true
opentelemetry.workspace = true
rand = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tower.workspace = true
tracing = { workspace = true }
url.workspace = true

[dev-dependencies]
assert_matches.workspace = true
tower.workspace = true
futures = { workspace = true }
janus_aggregator_core = { workspace = true, features = ["test-util"] }
rstest.workspace = true
serde_test.workspace = true
tokio.workspace = true
