[package]
name = "janus_aggregator_core"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
test-util = ["dep:hex", "dep:sqlx", "dep:testcontainers", "janus_core/test-util", "janus_messages/test-util"]

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
backoff = { version = "0.4.0", features = ["tokio"] }
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
deadpool = { version = "0.10.0", features = ["rt_tokio_1"] }
deadpool-postgres = "0.12.1"
derivative.workspace = true
futures = "0.3.30"
hex = { version = "0.4.3", features = ["serde"], optional = true }
http = "0.2.11"
http-api-problem = "0.57.0"
janus_core.workspace = true
janus_messages.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
opentelemetry.workspace = true
postgres-protocol = "0.6.6"
postgres-types = { version = "0.2.6", features = ["derive", "array-impls"] }
prio = { workspace = true, features = ["experimental"] }
rand = { workspace = true, features = ["min_const_gen"] }
regex = "1"
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls", "json"] }
ring = "0.17.8"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx = { version = "0.7.3", optional = true, features = ["runtime-tokio-rustls", "migrate", "postgres"] }
testcontainers = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1", "array-impls"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
trillium.workspace = true
trillium-macros = "0.0.5"
trillium-router.workspace = true
url.workspace = true

[dev-dependencies]
assert_matches.workspace = true
janus_aggregator_core = { path = ".", features = ["test-util"] }
janus_core = { workspace = true, features = ["test-util"] }
rstest.workspace = true
rstest_reuse = "0.6.0"
serde_test.workspace = true
tempfile = "3.10.0"
tokio = { version = "1", features = ["test-util"] }  # ensure this remains compatible with the non-dev dependency

[build-dependencies]
rustc_version = "0.4.0"
