[package]
name = "janus_aggregator_core"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
test-util = [
    "dep:hex",
    "dep:itertools",
    "dep:sqlx",
    "dep:testcontainers",
    "janus_core/test-util",
    "janus_messages/test-util",
    "prio/test-util"
]

[dependencies]
anyhow.workspace = true
async-trait = { workspace = true }
backoff = { workspace = true, features = ["tokio"] }
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
deadpool = { workspace = true, features = ["rt_tokio_1"] }
deadpool-postgres = { workspace = true }
derivative.workspace = true
futures = { workspace = true }
hex = { workspace = true, features = ["serde"], optional = true }
http.workspace = true
http-api-problem.workspace = true
itertools = { workspace = true, optional = true }
janus_core.workspace = true
janus_messages.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
opentelemetry.workspace = true
postgres-protocol = { workspace = true }
postgres-types = { workspace = true, features = ["derive", "array-impls"] }
prio = { workspace = true, features = ["experimental"] }
rand = { workspace = true, features = ["min_const_gen"] }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
ring = { workspace = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "migrate", "postgres"], optional = true }
testcontainers = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tokio-postgres = { workspace = true, features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1", "array-impls"] }
tracing = { workspace = true }
tracing-log = { workspace = true }
trillium.workspace = true
trillium-macros = { workspace = true }
trillium-router.workspace = true
url.workspace = true

[dev-dependencies]
assert_matches.workspace = true
janus_aggregator_core = { path = ".", features = ["test-util"] }
janus_core = { workspace = true, features = ["test-util"] }
rstest.workspace = true
rstest_reuse = { workspace = true }
serde_test.workspace = true
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }  # ensure this remains compatible with the non-dev dependency

[build-dependencies]
rustc_version = { workspace = true }
