[package]
name = "janus_client"
description = "Client for Janus, the server powering ISRG's Divvi Up."
documentation = "https://docs.rs/janus_client"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
derivative = "2.2.0"
http = "0.2.9"
itertools.workspace = true
janus_core.workspace = true
janus_messages.workspace = true
prio.workspace = true
rand = "0.8"
reqwest = { version = "0.11.21", default-features = false, features = ["rustls-tls", "json"] }
thiserror.workspace = true
tokio.workspace = true
tracing = "0.1.37"
url = "2.4.1"

[dev-dependencies]
assert_matches = "1"
hex-literal = "0.4.1"
janus_core = { workspace = true, features = ["test-util"]}
mockito = "1.2.0"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "fmt"] }
