[package]
name = "janus_client"
description = "Client for Janus, the server powering ISRG's Divvi Up."
documentation = "https://docs.rs/janus_client"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
backoff = { workspace = true, features = ["tokio"] }
derivative.workspace = true
http.workspace = true
itertools.workspace = true
janus_core.workspace = true
janus_messages.workspace = true
prio.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["json"] }
thiserror.workspace = true
tokio.workspace = true
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_matches.workspace = true
hex-literal = { workspace = true }
janus_core = { workspace = true, features = ["test-util"]}
mockito = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["std", "env-filter", "fmt"] }
